--- a/.github/workflows/scikit-optimize.yaml
+++ b/.github/workflows/scikit-optimize.yaml
@@ -1,7 +1,7 @@
 name: Lint
 on: [push]
 jobs:
-  check-bats-version:
+  flake8:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -12,9 +12,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
+      -name: Lint
         run: |
-           flake8 --show-source . --config ./examples/.flake8
-      - name: Run test
-        run: | 
+          flake8 --show-source . --config ./examples/.flake8
+  pytest:
+    runs-on: ubuntu-latest
+    steps:
+       steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; 
+      - name: Run pytest
+        run: |
           python -m pytest
