--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,18 +1,17 @@
-name: Lint
+name: Lint code
 on: [push]
 jobs:
   flake8:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
         with:
           python-version: 3.9
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      -name: Lint
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; 
+      - name: Run pytest
         run: |
-          flake8 --show-source . --config ./examples/.flake8
- 
+          flake8 --show-source . --config ./examples/.flake8          
