--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
         with:
           python-version: 3.9
       - name: Install dependencies
